Fix spacing with sign in and sign up pages

--- a/src/pages/signUpPage/signUpPage.module.scss
+++ b/src/pages/signUpPage/signUpPage.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 0 1rem;
 }
 
 .title {
